--- a/TP2/src/main/resources/view/Application.fxml
+++ b/TP2/src/main/resources/view/Application.fxml
@@ -3,15 +3,15 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ChoiceBox?>
-
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="555.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ApplicationGraphicalController">
+<AnchorPane prefHeight="555.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ApplicationGraphicalController">
    <stylesheets>
       <URL value="@Application.css" />
    </stylesheets>
@@ -44,10 +44,12 @@
                </font>
             </Text>
             <TextField fx:id="nomAcheteur" layoutX="156.0" layoutY="48.0" prefHeight="27.0" prefWidth="176.0" />
-            <TextField fx:id="totalSansTaxe" layoutX="156.0" layoutY="137.0" prefHeight="27.0" prefWidth="176.0" />
-            <TextField fx:id="taxesApplicables" layoutX="156.0" layoutY="186.0" prefHeight="27.0" prefWidth="176.0" />
-            <TextField fx:id="totalAvecTaxes" layoutX="156.0" layoutY="242.0" prefHeight="27.0" prefWidth="176.0" text="inconnu" />
-            <ChoiceBox fx:id="modePaiement" layoutX="156.0" layoutY="92.0" prefHeight="25.0" prefWidth="176.0"/>
+            <TextField fx:id="totalSansTaxe" editable="true" layoutX="156.0" layoutY="137.0" prefHeight="25.0" prefWidth="176.0" />
+            <TextField fx:id="taxesApplicables" editable="true" layoutX="156.0" layoutY="186.0" prefHeight="25.0" prefWidth="176.0" />
+            <TextField fx:id="totalAvecTaxes" editable="true" layoutX="156.0" layoutY="243.0" prefHeight="25.0" prefWidth="176.0" />
+            <ChoiceBox fx:id="modePaiement" layoutX="156.0" layoutY="92.0" prefHeight="25.0" prefWidth="176.0" />
+            <Label fx:id="TextErreur" layoutX="90.0" layoutY="270.0" prefHeight="32.0" prefWidth="200.0" text="Label" />
+
          </children>
       </Pane>
       <Button layoutX="86.0" layoutY="382.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="182.0" text="Ajouter">
